<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">南京招聘汇</string>
    <string name="startup_name">启动页</string>
    <string name="welcome_name">欢迎页</string>
    <string name="action_search">搜索</string>
    <string name="action_refresh">刷新</string>
    <string name="action_share">分享</string>
    <string name="action_comment">评论</string>
    <string name="action_delete">删除</string>
    <string name="action_favorite">收藏</string>
    <string name="action_save">保存</string>
    <string name="detail">详情</string>
    <string name="logout">登出账户</string>
    <string name="job_activity_fragment_text_joblist">"职位列表"</string>
    <string name="job_activity_fragment_text_myfavorite">我的收藏</string>
    <string name="common_activity_action_settings">"设置"</string>
    <string name="common_activity_action_help">"帮助"</string>
    <string name="common_activity_action_traffic">"公交"</string>
    <string name="common_activity_action_talk">"讨论区"</string>
    <string name="common_activity_action_feedback">"反馈"</string>
    <string name="feedback_activity_action_send">"发送"</string>
    <string name="preference_activity_search_settings">"搜索设置"</string>
    <string name="preference_activity_display">"显示"</string>
    <string name="preference_activity_push">"推送设置"</string>
    <string name="preference_activity_push_setting">"接受推送"</string>
    <string name="preference_activity_about">"关于软件"</string>
    <string name="preference_activity_version">"版本信息"</string>
    <string name="search_activity_search_label">"职位搜索"</string>
    <string name="preference_activity_industry">"行业类别"</string>
    <string name="preference_activity_publish_time">"发布时间"</string>
    <string name="preference_activity_exp_req">"经验要求"</string>
    <string name="preference_activity_edu_req">"学历要求"</string>
    <string name="preference_activity_employer_type">"公司性质"</string>
    <string name="preference_activity_job_type">"职位类型"</string>
    <string name="preference_activity_major_req">"专业要求"</string>
    <string name="preference_activity_province">"省"</string>
    <string name="preference_activity_city">"市"</string>
    <string name="preference_activity_fairowner">"举办单位"</string>
    <string name="preference_activity_portrait">"显示方式"</string>
    <string name="preference_activity_home_show">"人才市场显示设置"</string>
    <string name="preference_activity_campus_show">"校园招聘显示设置"</string>
    <string name="preference_activity_net_show">"网络招聘显示设置"</string>
    <string  name="preference_activity_current_version">"当前版本"</string>
    <string name="preference_activity_check_version">"检查新版本"</string>
    <string name="traffic_activity_bycar_action">"驾车"</string>
    <string name="traffic_activity_bybus_action">"公交"</string>
    <string name="traffic_activity_byfoot_action">"步行"</string>
    <string name="traffic_activity_edit_action">"编辑目的地"</string>
    <string name="pull_to_refresh_pull_label">拖动刷新...</string>
    <string name="pull_to_refresh_release_label">释放刷新...</string>
    <string name="pull_to_refresh_refreshing_label">正在加载...</string>
    <string name="pull_to_refresh_tap_label">按下拖动...</string>
    <string name="search_activity_search_hint">"请输入关键字"</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="com_sina_weibo_sdk_login_with_weibo_account">新浪微博</string>
    <string name="com_tencent_weibo_sdk_login_with_weibo_account">腾讯微博</string>
</resources>