<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/activity_action_search"
          android:title="@string/action_search"
          android:icon="@android:drawable/ic_menu_search"
          app:showAsAction="always"/>
    <item android:id="@+id/action_favorite"
          android:title="@string/action_favorite"
          android:icon="@drawable/ic_menu_star"
          app:showAsAction="always" />
    <item android:id="@+id/action_traffic"
          android:icon="@android:drawable/ic_menu_mapmode"
          android:title="@string/common_activity_action_traffic"
          app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/common_activity_action_settings"
          android:icon="@android:drawable/ic_menu_manage"
          app:showAsAction="never" />
    <item android:id="@+id/action_feedback"
          android:icon="@drawable/ic_menu_compose"
          android:title="@string/common_activity_action_feedback"
          app:showAsAction="never" />
</menu>