<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<PreferenceCategory-->
            <!--android:title="@string/preference_activity_search_settings"-->
            <!--android:key="pref_key_search_settings">-->
        <!--<PreferenceScreen-->
                <!--android:key="industry_setting"-->
                <!--android:title="@string/preference_activity_industry"-->
                <!--android:persistent="false">-->
        <!--</PreferenceScreen>-->
        <!--<PreferenceScreen-->
                <!--android:key="job_type_setting"-->
                <!--android:title="@string/preference_activity_job_type"-->
                <!--android:persistent="false">-->
        <!--</PreferenceScreen>-->
        <!--<PreferenceScreen-->
                <!--android:key="major_req_setting"-->
                <!--android:title="@string/preference_activity_major_req"-->
                <!--android:persistent="false">-->
        <!--</PreferenceScreen>-->
    <!--</PreferenceCategory>-->
    <PreferenceCategory
            android:title="@string/preference_activity_push"
            android:key="pref_key_about_push">
        <CheckBoxPreference
                android:key="bind_flag_2"
                android:title="@string/preference_activity_push_setting"
                android:persistent="true"
                android:defaultValue="true">
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/preference_activity_about"
            android:key="pref_key_about_setting">
        <PreferenceScreen
                android:key="pref_key_welcome__setting"
                android:title="@string/welcome_name"
                android:persistent="false">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetPackage="com.weiyitech.zhaopinzh.presentation"
                    android:targetClass="com.weiyitech.zhaopinzh.presentation.activity.WelcomeActivity"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/preference_activity_display"
            android:key="pref_key_display_settings">
        <!--<ListPreference-->
        <!--android:title="@string/preference_activity_portrait"-->
        <!--android:key="pref_key_portrait_setting"-->
        <!--android:entries="@array/portrait_setting_name_list"-->
        <!--android:entryValues="@array/portrait_setting_name_list"-->
        <!--android:defaultValue="竖屏显示">-->
        <!--</ListPreference>-->
        <PreferenceScreen
                android:key="pref_key_home_show_setting"
                android:title="@string/preference_activity_home_show"
                android:persistent="false">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetPackage="com.weiyitech.zhaopinzh.presentation"
                    android:targetClass="com.weiyitech.zhaopinzh.presentation.activity.HomeFragmentOrderSettingActivity"/>
        </PreferenceScreen>
        <PreferenceScreen
                android:key="pref_key_campus_show_setting"
                android:title="@string/preference_activity_campus_show"
                android:persistent="false">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetPackage="com.weiyitech.zhaopinzh.presentation"
                    android:targetClass="com.weiyitech.zhaopinzh.presentation.activity.CampusFragmentOrderSettingActivity"/>
        </PreferenceScreen>
        <PreferenceScreen
                android:key="pref_key_net_show_setting"
                android:title="@string/preference_activity_net_show"
                android:persistent="false">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetPackage="com.weiyitech.zhaopinzh.presentation"
                    android:targetClass="com.weiyitech.zhaopinzh.presentation.activity.NetFragmentOrderSettingActivity"/>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/preference_activity_version"
            android:key="pref_key_version_settings">
        <PreferenceScreen
                android:key="current_version_setting"
                android:title="@string/preference_activity_current_version"
                android:summary="5.0.6"
                android:persistent="false">
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>